--- a/app/src/main/res/layout/activity_add_medicine_page.xml
+++ b/app/src/main/res/layout/activity_add_medicine_page.xml
@@ -217,20 +217,39 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/MedicineDose"
         android:layout_marginEnd="7dp"
+        android:fontFamily="@font/montserrat"
         android:text="Repeat"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/repeatInterval"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/pillIcon"
-        app:layout_constraintTop_toBottomOf="@+id/pillIcon" />
+        app:layout_constraintTop_toBottomOf="@+id/pillIcon"
+        app:layout_constraintVertical_bias="0.673" />
+
+    <Spinner
+        android:id="@+id/repeatType"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/RepeatView"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
+        android:ems="10"
+        android:fontFamily="@font/montserrat"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/repeatNO"
+        app:layout_constraintStart_toEndOf="@+id/repeatInterval"
+        app:layout_constraintTop_toBottomOf="@+id/RepeatView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/RepeatView"
-        android:layout_marginTop="14dp"
+        android:fontFamily="@font/montserrat"
         android:text="Every"
         app:layout_constraintStart_toStartOf="@+id/RepeatView"
         app:layout_constraintTop_toTopOf="@+id/repeatInterval" />
@@ -238,51 +257,42 @@
     <EditText
         android:id="@+id/repeatInterval"
         android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/custom_edit_text"
         android:ems="10"
         android:inputType="number"
         android:text=""
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toStartOf="@+id/repeatType"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
-
-    <Spinner
-        android:id="@+id/repeatType"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/RepeatView"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="40dp"
-        android:ems="10"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/repeatNO"
-        app:layout_constraintStart_toEndOf="@+id/repeatInterval" />
-
-    <EditText
-        android:id="@+id/repeatNO"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="30dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/montserrat"
         android:text="times"
         app:layout_constraintStart_toEndOf="@+id/repeatNO"
         app:layout_constraintTop_toTopOf="@+id/repeatInterval" />
+
+    <EditText
+        android:id="@+id/repeatNO"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/custom_edit_text"
+        android:ems="10"
+        android:inputType="number"
+        android:text=""
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/textView3" />
 
     <Button
         android:id="@+id/button"
