--- a/app/src/main/res/layout/activity_add_appointment_page.xml
+++ b/app/src/main/res/layout/activity_add_appointment_page.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".controller.main.calendar.Add_Appointment_Page">
+    tools:context=".controller.main.calendar.Add_Appointment_Page"
+    android:id="@+id/Add_Appointment_Page">
 
     <ImageView
         android:id="@+id/backButton"
@@ -25,7 +26,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
-        android:text="Appointment"
+        android:text="@string/AddApp"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -40,7 +41,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/montserrat"
-        android:text="Title"
+        android:text="@string/TitleApp"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -83,7 +84,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Day"
+        android:text="@string/DayApp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +99,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/custom_edit_text"
         android:elevation="0dp"
-        android:text="Set Day"
+        android:text="@string/SetDayApp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/calIcon"
         app:layout_constraintTop_toBottomOf="@+id/DateTV" />
@@ -112,7 +113,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Time"
+        android:text="@string/TimeApp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +139,7 @@
         android:layout_marginEnd="32dp"
 
         android:background="@drawable/custom_edit_text"
-        android:text="Set Time"
+        android:text="@string/SetTimeApp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cloIcon"
         app:layout_constraintTop_toBottomOf="@+id/TimeTV" />
