--- a/app/src/main/res/layout/activity_patient_appointment_detail_page.xml
+++ b/app/src/main/res/layout/activity_patient_appointment_detail_page.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".controller.main.calendar.PatientAppointmentDetailPage">
+    tools:context=".controller.main.calendar.PatientAppointmentDetailPage"
+    android:id="@+id/PatientAppointmentDetailPage">
 
     <ImageView
         android:id="@+id/backButton"
@@ -25,7 +26,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
-        android:text="Appointment"
+        android:text="@string/AppDetails"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -40,7 +41,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/montserrat"
-        android:text="Title"
+        android:text="@string/TitleApp"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +83,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Day"
+        android:text="@string/DayApp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +113,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Time"
+        android:text="@string/TimeApp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +153,7 @@
         android:background="@drawable/delete_button"
         android:fontFamily="@font/montserrat"
         android:padding="3dp"
-        android:text="Delete Appointment"
+        android:text="@string/DeleteApp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
