--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".controller.main.profile.Editprofile">
+    tools:context=".controller.main.profile.Editprofile"
+    android:id="@+id/Editprofile">
 
 
     <LinearLayout
@@ -17,16 +18,41 @@
         android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_margin="10dp"
-            android:text="Save"
-            android:textColor="@color/colorAccent"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_gravity="left"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/forgetPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginRight="180dp"
+                android:layout_weight="1"
+                android:background="#FFFFFF"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/forgot_password"
+                android:textAlignment="viewStart"
+                android:textColor="@color/colorAccent"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="10dp"
+                android:text="Save"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
 
         <ImageView
@@ -36,7 +62,6 @@
             app:srcCompat="@drawable/defaultpic" />
 
 
-
         <Button
             android:id="@+id/buttonImage"
             android:layout_width="150dp"
@@ -44,9 +69,8 @@
 
             android:background="@drawable/custom_edit_text"
             android:ellipsize="none"
-            android:text="Choose Image"
-            android:textColor="@color/black"
-      />
+            android:text="@string/ChooseImage"
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
@@ -75,7 +99,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Full name"
+                android:text="@string/full_name"
                 android:textColor="#817889"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -89,7 +113,7 @@
                 android:layout_marginTop="5dp"
 
                 android:ems="12"
-                android:hint="Full Name"
+                android:hint="@string/full_name"
                 android:inputType="textPersonName"
                 android:textColor="#B1B0B0" />
 
@@ -108,7 +132,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Old password"
+                android:text="@string/OldPassET"
                 android:textColor="#817889"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -121,6 +145,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="5dp"
                 android:ems="12"
+                android:inputType="textPassword"
                 android:textColor="#B1B0B0" />
 
         </LinearLayout>
@@ -138,7 +163,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat"
-                android:text="New password"
+                android:text="@string/NewPassET"
                 android:textColor="#817889"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -151,7 +176,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="5dp"
                 android:ems="12"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:textColor="#B1B0B0" />
 
         </LinearLayout>
@@ -170,7 +195,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Confirm New password"
+                android:text="@string/CNPassET"
                 android:textColor="#817889"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -183,7 +208,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="5dp"
                 android:ems="12"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:textColor="#B1B0B0" />
 
         </LinearLayout>
@@ -197,7 +222,7 @@
             android:background="@drawable/delete_button"
             android:fontFamily="@font/montserrat"
             android:padding="10dp"
-            android:text="Delete Account"
+            android:text="@string/DeleteAcc"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
