--- a/app/src/main/res/layout/fragment_text_draft.xml
+++ b/app/src/main/res/layout/fragment_text_draft.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".controller.main.drafts.TextDraftFragment"
+    android:id="@+id/TextDraftFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recyclerview_Text_Draft"
