--- a/app/src/main/res/layout/fragment_voice_draft.xml
+++ b/app/src/main/res/layout/fragment_voice_draft.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.main.drafts.VoiceDraftFragment">
+    tools:context=".controller.main.drafts.VoiceDraftFragment"
+    android:id="@+id/VoiceDraftFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
