--- a/app/src/main/res/layout/my_doctor.xml
+++ b/app/src/main/res/layout/my_doctor.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".controller.main.profile.MyDoctor">
+    tools:context=".controller.main.profile.MyDoctor"
+    android:id="@+id/MyDoctor">
 
     <ImageView
         android:id="@+id/backButton"
@@ -19,13 +20,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/add_Appointment"
+        android:id="@+id/my_Doctor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
-        android:text="My Doctor"
+        android:text="@string/MyDoc"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -40,12 +41,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/montserrat"
-        android:text="Doctor Name"
+        android:text="@string/AddDocName"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/nameET"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -86,12 +87,12 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
-        android:text="Doctor Email"
+        android:text="@string/AddDocEmail"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameET" />
 
-    <EditText
+    <TextView
         android:id="@+id/emailET"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -164,7 +165,7 @@
         android:background="@drawable/delete_button"
         android:fontFamily="@font/montserrat"
         android:padding="3dp"
-        android:text="Delete Doctor"
+        android:text="@string/DeleteDoc"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
