--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".controller.main.profile.PatientProfile">
+    tools:context=".controller.main.profile.PatientProfile"
+    android:id="@+id/PatientProfile">
 
 
     <ImageView
@@ -105,7 +106,7 @@
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:text="To help ensure your account's security please verify your email."
+                android:text="@string/VervEmail"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
 
