--- a/app/src/main/res/layout/fragment_all_draft.xml
+++ b/app/src/main/res/layout/fragment_all_draft.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
     android:id="@+id/AllDraft">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical"
@@ -15,14 +15,14 @@
 
 
     <TextView
-        android:id="@+id/voiceView"
+        android:id="@+id/TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text Drafts"/>
+        android:text="@string/Text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recyclerview_All_DraftText"
-        android:layout_below="@+id/voiceView"
+        android:layout_below="@+id/TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -32,16 +32,16 @@
         android:scrollbars="vertical"/>
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_below="@id/Recyclerview_All_DraftText"
-        android:layout_marginTop="20dp"
+        android:id="@+id/VoiceView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Voice Drafts"/>
+        android:layout_below="@id/Recyclerview_All_DraftText"
+        android:layout_marginTop="20dp"
+        android:text="@string/Voice" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Recyclerview_All_DraftVoice"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/VoiceView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
