Text Draft Tap Pass

--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layout_rounded_bg"
-    android:id="@+id/layout"
+    android:id="@+id/drafts"
     android:orientation="vertical"
     >
 
