--- a/app/src/main/res/layout/location_row.xml
+++ b/app/src/main/res/layout/location_row.xml
@@ -15,20 +15,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical">
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_gravity="center"
-                android:background="#1A000000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/improvement_num" />
 
 
             <LinearLayout
@@ -53,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:text="anxietyLevel"
                     android:textColor="@color/Error"
                      />
@@ -73,7 +62,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
+                android:paddingBottom="5dp"
                 android:text="Place 1 - Place 2" />
+
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="150dp"
+                android:layout_height="2dp"
+                android:layout_gravity="left"
+                android:background="#1A000000"
+                />
 
         </LinearLayout>
 
