--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -81,7 +81,7 @@
 
         <LinearLayout
             android:layout_width="320dp"
-            android:layout_height="54dp"
+            android:layout_height="60dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/delete_button"
             android:focusable="auto"
@@ -96,20 +96,37 @@
                 android:layout_marginStart="15dp"
                 app:srcCompat="@drawable/ic_error" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
             <TextView
                 android:id="@+id/alarmMsg"
-                android:layout_width="0dp"
-                android:layout_height="45dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
                 android:text="To help ensure your account's security please verify your email."
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="13sp" />
 
+            <TextView
+                android:id="@+id/resend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:paddingStart="10dp"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/resend_verification_email"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
 
+            </LinearLayout>
         </LinearLayout>
 
 
