[FEAT] : Resend Verification Link

--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -97,6 +97,7 @@
                 app:srcCompat="@drawable/ic_error" />
 
             <LinearLayout
+                android:id="@+id/resendL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
