--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -24,22 +24,6 @@
             android:layout_gravity="left"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/forgetPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginRight="180dp"
-                android:layout_weight="1"
-                android:background="#FFFFFF"
-                android:clickable="true"
-                android:focusable="true"
-                android:fontFamily="@font/montserrat"
-                android:text="@string/forgot_password"
-                android:textAlignment="viewStart"
-                android:textColor="@color/colorAccent"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/save"
                 android:layout_width="wrap_content"
@@ -148,12 +132,26 @@
                 android:inputType="textPassword"
                 android:textColor="#B1B0B0" />
 
+            <TextView
+                android:id="@+id/forgetPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="60dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:layout_gravity="end"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/forgot_password"
+                android:textColor="@color/colorAccent"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <TextView
