--- a/app/src/main/res/layout/play_draft_audio_dialog.xml
+++ b/app/src/main/res/layout/play_draft_audio_dialog.xml
@@ -141,7 +141,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:text="X2"
+        android:text="@string/SpeedPalyAydio"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -153,10 +153,10 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="16dp"
-        android:text="Delete"
         android:fontFamily="@font/montserrat"
-        android:textStyle="bold"
+        android:text="@string/DeleteAudio"
         android:textColor="@color/Error"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
