--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -25,6 +25,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ImageSavedStorage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Is Image Saved in Storage?" />
+
+            <TextView
                 android:id="@+id/save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
